# log-sloth

./: .docker-ignore  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build-env  Dockerfile.perf  Makefile  README.md
docker/: .gitignore  apk-repositories  docker-compose.yml  log-sloth-aws-creds-secret.yml  log-sloth-deployment.yml  log-sloth-service.yml  perf.list
nom-syslog/: .gitignore  Cargo.toml
nom-syslog/benches/: bench.rs
nom-syslog/src/: lib.rs  parser.rs
scripts/windows/: Gemfile  events.xsd  structify.rb
src/: enrichment_lookup_table.rs  find_ip.rs  fortigate.rs  fortigate_kv.rs  lib.rs  main.rs  max_size_chunk.rs  stats.rs
src/log_processors/: mod.rs  windows_xml.rs
