[package]
name = "log-sloth"
version = "0.3.0"
authors = ["Xavier Lange <xrlange@gmail.com>"]

[dependencies]
ctrlc = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
nom-syslog = { path = "nom-syslog" }
nom = "*"
log = {version = "*", features = ["release_max_level_info"] }
lazy_static = "*"
env_logger = "*"
pretty-bytes = "*"
rusoto_core = { git = "https://github.com/tureus/rusoto", branch = "master" } # { path = "/Users/xlange/code/viasat/rusoto/rusoto/core" }
rusoto_kinesis = { git = "https://github.com/tureus/rusoto", branch = "master" } # { path = "/Users/xlange/code/viasat/rusoto/rusoto/services/kinesis" }
prctl = "*"
futures = "*"
futures-cpupool = "*"
tokio-core = "*"
tokio-io = "*"
time = "*"
docopt = "0.8"
openssl-probe = "0.1.2"
hostname = "0.1"
hyper = "*"
indexmap = { version = "*", features = ["serde-1"] }
csv = "1.0.0-beta.5"

[profile.release]
lto = true
#debug = true
